--- a/src/avatars/avatars.html
+++ b/src/avatars/avatars.html
@@ -1,16 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko-KR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Avatars 과제</title>
-  <link rel="shortcut icon" href="/src/assets/favicon/likelion.ico" type="image/x-icon" />
-  <link rel="icon" href="/src/assets/favicon/likelion.svg" />
-  <link rel="preload" as="font" href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT-Regular.woff2">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT.css">
-  <link rel="stylesheet" href="./styles/avatars.css" />
-</head>
-<body>
-  <!-- 여기에 마크업을 구성해 주세요. -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Avatars 과제</title>
+    <link rel="shortcut icon" href="/src/assets/favicon/likelion.ico" type="image/x-icon" />
+    <link rel="icon" href="/src/assets/favicon/likelion.svg" />
+    <link rel="preload" as="font" href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT-Regular.woff2" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT.css" />
+    <link rel="stylesheet" href="./styles/avatars.css" />
+  </head>
+  <body>
+    <!-- 여기에 마크업을 구성해 주세요. -->
+
+    <figure class="wimg">
+      <img src="/src/avatars/images/face1.jpg" alt="여1" />
+      <img src="/src/avatars/images/face2.jpg" alt="여2" />
+      <img src="/src/avatars/images/face3.jpg" alt="여3" />
+      <img src="/src/avatars/images/face4.jpg" alt="여4" />
+    </figure>
+    <figure class="mimg">
+      <img src="/src/avatars/images/face5.jpg" alt="남1" />
+      <img src="/src/avatars/images/face6.jpg" alt="남2" />
+      <img src="/src/avatars/images/face7.jpg" alt="남3" />
+      <img src="/src/avatars/images/face8.jpg" alt="남4" />
+    </figure>
+  </body>
 </html>
