--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <ul class="homework-links">
         <li><a href="./src/md/markdown.md">마크다운 과제</a></li>
         <li><a href="./src/avatars/avatars.html">아바타</a></li>
+        <li><a href="./src/login/login.html">네이버 로고 및 체크박스</a></li>
         <li><a href="">과제 3</a></li>
         <li><a href="">과제 4</a></li>
       </ul>
